traveller dashboard improvements

--- a/src/app/traveller/traveller.component.html
+++ b/src/app/traveller/traveller.component.html
@@ -3,95 +3,7 @@
   <h2 class="ui header">Dashboard Voyageur</h2>
   <div class="ui two column grid">
     <div class="column">
-      <table class="top attached ui basic table">
-        <thead>
-        <tr><th>Header</th>
-          <th>Header</th>
-          <th>Header</th>
-        </tr></thead>
-        <tbody>
-        <tr>
-          <td>Cell</td>
-          <td>Cell</td>
-          <td>Cell</td>
-        </tr>
-        <tr>
-          <td>Cell</td>
-          <td>Cell</td>
-          <td>Cell</td>
-        </tr>
-        <tr>
-          <td>Cell</td>
-          <td>Cell</td>
-          <td>Cell</td>
-        </tr>
-        </tbody>
-      </table>
-      <table class="attached ui table">
-        <tbody>
-        <tr>
-          <td>Cell</td>
-          <td>Cell</td>
-          <td>Cell</td>
-        </tr>
-        <tr>
-          <td>Cell</td>
-          <td>Cell</td>
-          <td>Cell</td>
-        </tr>
-        <tr>
-          <td>Cell</td>
-          <td>Cell</td>
-          <td>Cell</td>
-        </tr>
-        </tbody>
-      </table>
-      <table class="attached ui celled selectable table">
-        <tbody>
-        <tr>
-          <td>Cell</td>
-          <td>Cell</td>
-          <td>Cell</td>
-        </tr>
-        <tr>
-          <td>Cell</td>
-          <td>Cell</td>
-          <td>Cell</td>
-        </tr>
-        <tr>
-          <td>Cell</td>
-          <td>Cell</td>
-          <td>Cell</td>
-        </tr>
-        </tbody>
-      </table>
-      <table class="bottom attached ui celled table">
-        <thead>
-        <tr><th>Header</th>
-          <th>Header</th>
-          <th>Header</th>
-        </tr></thead>
-        <tbody>
-        <tr>
-          <td>Cell</td>
-          <td>Cell</td>
-          <td>Cell</td>
-        </tr>
-        <tr>
-          <td>Cell</td>
-          <td>Cell</td>
-          <td>Cell</td>
-        </tr>
-        <tr>
-          <td>Cell</td>
-          <td>Cell</td>
-          <td>Cell</td>
-        </tr>
-        </tbody>
-      </table>
-    </div>
-    <div class="column">
-      <div class="ui segments">
+      <div class="ui segments"> <!--style="max-height: 400px; overflow: scroll;"-->
         <div class="ui segment">
             <b>Vos voyages</b>
         </div>
@@ -112,5 +24,123 @@
         </div>
       </div>
     </div>
+      <div class="column">
+          <div class="ui segments">
+              <div class="ui segment">
+                  <b>Messages recents</b>
+              </div>
+              <div class="ui segment">
+                  <div class="ui relaxed divided list">
+                      <div class="item">
+                          <i class="large mail middle aligned icon"></i>
+                          <div class="content">
+                              <a class="header">Semantic-Org/Semantic-UI</a>
+                              <div class="description">10 min</div>
+                          </div>
+                      </div>
+                      <div class="item">
+                          <i class="large mail middle aligned icon"></i>
+                          <div class="content">
+                              <a class="header">Semantic-Org/Semantic-UI-Docs</a>
+                              <div class="description">22 min</div>
+                          </div>
+                      </div>
+                      <div class="item">
+                          <i class="large open envelope outline middle aligned icon"></i>
+                          <div class="content">
+                              <a class="header">Semantic-Org/Semantic-UI-Meteor</a>
+                              <div class="description">34 min</div>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+          <table class="top attached ui basic table">
+              <thead>
+              <tr><th>Header</th>
+                  <th>Header</th>
+                  <th>Header</th>
+              </tr></thead>
+              <tbody>
+              <tr>
+                  <td>Cell</td>
+                  <td>Cell</td>
+                  <td>Cell</td>
+              </tr>
+              <tr>
+                  <td>Cell</td>
+                  <td>Cell</td>
+                  <td>Cell</td>
+              </tr>
+              <tr>
+                  <td>Cell</td>
+                  <td>Cell</td>
+                  <td>Cell</td>
+              </tr>
+              </tbody>
+          </table>
+          <table class="attached ui table">
+              <tbody>
+              <tr>
+                  <td>Cell</td>
+                  <td>Cell</td>
+                  <td>Cell</td>
+              </tr>
+              <tr>
+                  <td>Cell</td>
+                  <td>Cell</td>
+                  <td>Cell</td>
+              </tr>
+              <tr>
+                  <td>Cell</td>
+                  <td>Cell</td>
+                  <td>Cell</td>
+              </tr>
+              </tbody>
+          </table>
+          <table class="attached ui celled selectable table">
+              <tbody>
+              <tr>
+                  <td>Cell</td>
+                  <td>Cell</td>
+                  <td>Cell</td>
+              </tr>
+              <tr>
+                  <td>Cell</td>
+                  <td>Cell</td>
+                  <td>Cell</td>
+              </tr>
+              <tr>
+                  <td>Cell</td>
+                  <td>Cell</td>
+                  <td>Cell</td>
+              </tr>
+              </tbody>
+          </table>
+          <table class="bottom attached ui celled table">
+              <thead>
+              <tr><th>Header</th>
+                  <th>Header</th>
+                  <th>Header</th>
+              </tr></thead>
+              <tbody>
+              <tr>
+                  <td>Cell</td>
+                  <td>Cell</td>
+                  <td>Cell</td>
+              </tr>
+              <tr>
+                  <td>Cell</td>
+                  <td>Cell</td>
+                  <td>Cell</td>
+              </tr>
+              <tr>
+                  <td>Cell</td>
+                  <td>Cell</td>
+                  <td>Cell</td>
+              </tr>
+              </tbody>
+          </table>
+      </div>
   </div>
 </div>
