--- a/src/app/hoster/hoster.component.html
+++ b/src/app/hoster/hoster.component.html
@@ -4,9 +4,21 @@
     margin-left: 22% !important;
     margin-right: 22% !important;
   }
+
+  input[type="text"] {
+    float:none !important;
+    padding: 4px !important;
+    padding-left: 8px !important;
+    padding-right: 8px !important;
+    width: 83% !important;
+  }
+
+  .blue.segment {
+    background-color: white !important;
+  }
 </style>
 <div class="ui grid container">
-  <div class="column row">
+  <div class="one column row">
     <div class="column">
       <div class="ui blue segment" style="padding-bottom: 40px">
       <h1 class="ui header center">Devenez hôte et recevez une aide précieuse</h1>
@@ -22,23 +34,25 @@
             <label>Adresse du logement</label>
             <input [(ngModel)]="adress" type="text" placeholder="Adresse" required>
           </div>
-          <div class="two wide field" style="margin-left: 20px !important;">
-            <label>Code postale</label>
-            <input [(ngModel)]="zipcode" type="text" placeholder="code postale" required>
+          <div class="four wide field" style="margin-left: 20px !important;">
           </div>
           <div class="four wide field" style="margin-left: 20px !important;">
             <label>Ville</label>
             <input [(ngModel)]="city" type="text" placeholder="Ville" required>
           </div>
+          <div class="two wide field" style="margin-left: 20px !important;">
+            <label>Code postale</label>
+            <input [(ngModel)]="zipcode" type="text" placeholder="code postale" required>
+          </div>
         </div>
         <div class="fields">
-          <div class="eight wide field">
+          <div class="eight wide field" style="float:none !important">
             <input type="text" placeholder="8 Wide">
           </div>
-          <div class="six wide field">
+          <div class="six wide field" style="float:none !important">
             <input type="text" placeholder="6 Wide">
           </div>
-          <div class="two wide field">
+          <div class="two wide field" style="float:none !important">
             <input type="text" placeholder="2 Wide">
           </div>
         </div>
