traveller dashboard more improvements

--- a/src/app/manager-layout/manager-layout.component.html
+++ b/src/app/manager-layout/manager-layout.component.html
@@ -152,7 +152,7 @@
 
 <!-- Page Contents -->
 <div class="pusher">
-  <div class="ui inverted vertical masthead center aligned segment">
+  <div class="ui inverted vertical masthead center aligned segment" style="min-height: 190px;">
     <div class="ui grid container">
       <div class="one column row  computer only">
         <div class="column">
@@ -182,7 +182,7 @@
     </div>-->
 
     <div class="ui text container">
-      <h2 class="ui inverted header">
+      <h2 class="ui inverted header" style="margin-top: 10px;">
         Travel Skills
       </h2>
     </div>
