--- a/src/app/menu-computer/menu-computer.component.html
+++ b/src/app/menu-computer/menu-computer.component.html
@@ -5,7 +5,7 @@
     <a class="active item" routerLink="/">Accueil</a>
     <!-- <a class="item" routerLink="/manager/hoster">Devenir hote</a> -->
     <!-- <a class="item" routerLink="/manager/traveller">Organiser son voyage</a> -->
-    <a class="item" routerLink="/manager/hoster">Espace hote</a>
+    <a class="item" routerLink="/manager/host">Espace hote</a>
     <a class="item" routerLink="/manager/traveller">Espace voyageur</a>
     <div class="right vertical menu">
       <div class="item" suiPopup [popupTemplate]="popupTemplate" popupTrigger="outsideClick">
