--- a/src/app/menu-tab-mobile/menu-tab-mobile.component.html
+++ b/src/app/menu-tab-mobile/menu-tab-mobile.component.html
@@ -12,7 +12,7 @@
     <i class="home icon"></i>
     Accueil
   </a>
-  <a class="item" routerLink="/manager/hoster">
+  <a class="item" routerLink="/manager/host">
     <i class="block layout icon"></i>
     Devenir hote
   </a>
